# algovis

./: .clang-format  CMakeLists.txt  Makefile  README.md
include/: bubble_sort.hpp  insertion_sort.hpp  quick_sort.hpp  selection_sort.hpp  test_suite.hpp
include/algorithms/: bubble_sort.h  heap_sort.h  insertion_sort.h  quick_sort.h  selection_sort.h
include/core/: registry.h  sort_observer.h
include/ui/: menu.h  menu.hpp  ncurses_window.h  view_interface.h  visualizer.h  window.h
src/: main.cpp
src/algorithms/: bubble_sort.cpp  heap_sort.cpp  insertion_sort.cpp  quick_sort.cpp  selection_sort.cpp
src/ui/: menu.cpp  visualizer.cpp  window.cpp
